2003-10-29  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: Add about and contacts, remove organization and 
	  documentation.
	* foundation.gnome.org/about/*: New content.
	* foundation.gnome.org/contact/*: New content.
	* foundation.gnome.org/documentation/*: Remove.
	* foundation.gnome.org/organization/*: Remove.
	* include/evilsedhack: Update with new sections.

2003-10-27  Vincent Untz  <vincent@vuntz.net>

	* foundation.gnome.org/organization/advisory_board.wml
	* foundation.gnome.org/organization/board_of_directors-2000.wml
	* foundation.gnome.org/organization/board_of_directors-2001.wml
	* foundation.gnome.org/organization/board_of_directors.wml
	* foundation.gnome.org/organization/executive_director.wml: really
	remove those.

2003-10-27  Vincent Untz  <vincent@vuntz.net>

	* configure.in: add organization/advisory/, organization/directors/ and
	organization/executive/
	* foundation.gnome.org/organization/*: moved advisory_board.wml,
	board_of_directors*.wml and executive_director.wml to subdirectories
	* foundation.gnome.org/elections/2002/*: move preliminary_results.wml to
	preliminary-results.wml
	* foundation.gnome.org/htaccess: redirect above moved pages
	* foundation.gnome.org/*: lots of small fixes (mainly
	indentation/wording)

2003-10-27  Vincent Untz  <vincent@vuntz.net>

	* foundation.gnome.org/index.wml: don't use <center>
	* foundation.gnome.org/elections/2003/voters.wml: updated e-mail
	address for Thomas Vander Stichele

2003-10-27  Jeff Waugh  <jdub@perkypants.org>

	* configure.in: Add news/
	* foundation.gnome.org/.cvsignore: Remove news.html
	* foundation.gnome.org/Makefile.am: Add news/
	* foundation.gnome.org/htaccess: Redirect for news.html
	* foundation.gnome.org/index.wml: Relink news.html
	* foundation.gnome.org/news.wml: Removed.
	* foundation.gnome.org/news/.cvsignore: New.
	* foundation.gnome.org/news/Makefile.am: New.
	* foundation.gnome.org/news/index.wml: From ../news.html

2003-10-27  Vincent Untz  <vincent@vuntz.net>