@@ -16,6 +16,7 @@ Makefile
 foundation.gnome.org/Makefile
 foundation.gnome.org/about/Makefile
 foundation.gnome.org/about/history/Makefile
+foundation.gnome.org/about/charter/Makefile
 foundation.gnome.org/elections/Makefile
 foundation.gnome.org/elections/2000/Makefile
 foundation.gnome.org/elections/2001/Makefile
