@@ -1,10 +1,9 @@
-SUBDIRS = history
+SUBDIRS = history charter
 
 urlpath = /about
  
 page_SCRIPTS = \
-	index.html	\
-	charter.html
+	index.html
 
 page_DATA = \
 	bylaws.pdf
