@@ -1,0 +1,8 @@
+SUBDIRS = 
+
+urlpath = /about/charter
+ 
+page_SCRIPTS = \
+	index.html
+
+include $(top_srcdir)/rules.common
