@@ -7,23 +7,89 @@
   </head>
 
   <body>
-    <h1>GNOME Foundation Membership</h1>
+
+    <h1>Membership for the GNOME Foundation</h1>
+
     <p>
-      The Membership consists of all GNOME contributors who wish to become part
-      of the Membership and go through the application process. Members can
-      run for election to the Board of Directors, vote in the elections for
-      the Board of Directors, and suggest referenda. The membership process is
-      overseen by the Membership and Elections Committee, which can be reached
-      at <a href="mailto:membership-commitee@gnome.org">membership-committee@gnome.org</a>.
-    </p>
-    <p>
-      If you are a GNOME contributor and would like to become a member of the
-      Foundation, fill in the <a href="application.php">membership application
-      form</a>.
-      If you aren't sure if you qualify, read the <a href="policy.html">
-      Membership Policy</a>.
-      You can also browse the <a href="members.html">current membership
+      The Membership consists of all GNOME contributors who wish to become part of 
+      the Membership and go through the application process. Members can run for 
+      election to the Board of Directors, vote in the elections for the Board of Directors, 
+      and suggest referenda. The membership process is overseen by the Membership and 
+      Elections Committee. You can also browse the <a href="members.html">current membership 
       list</a>.
     </p>
+
+    <p>
+      If you are a GNOME contributor and would like to become a member of the Foundation, 
+      fill in the <a href="application.php">membership application form</a>.
+    </p>
+
+    <h2>Who is eligible for membership in the GNOME Foundation?</h2>
+
+    <p>
+      Per the GNOME Foundation's charter, any contributor to GNOME is eligible
+      for membership. Although it is difficult to specify a precise definition,
+      a contributor generally must have contributed to a non-trivial
+      improvement of the GNOME Project. Contributions may be code,
+      documentation, translations, maintenance of project-wide resources, or
+      other non-trivial activities which benefit the GNOME Project. While large
+      amounts of advocacy or bug reporting may qualify one as a member, such
+      contributions must be significantly above the level expected of an
+      ordinary user. Membership eligibility is an individual determination:
+      while contributions made in the course of employment will be considered,
+      they will generally be ascribed to the individuals involved, rather
+      than accruing to all employees of a "contributing" corporation. As noted
+      above, these guidelines are not meant to define precise objective
+      criteria: ultimately, an individual's membership eligibility will be
+      determined on a case-by-case basis, in the sound discretion of the
+      Membership Committee and the Board of Directors.
+    </p>
+
+    <p>
+      For a more complete definition of the guidelines, you can look at the <a
+      href="http://mail.gnome.org/archives/foundation-announce/2002-October/msg00003.html">proposal
+      for guidelines</a> that was accepted by the board in 2002 October.
+    </p>
+
+    <h2>How can I apply for membership in the GNOME Foundation?</h2>
+
+    <p>
+      To apply for membership, please complete the form available <a
+      href="application.php">on the web</a>. Please note that applications for
+      membership must include sufficient information to allow the Membership
+      Committee to verify the applicants' eligibility; applications which
+      include inaccurate or insufficient information may be rejected at the
+      committee's discretion.
+    </p>
+
+    <h2>My application was rejected; what can I do?</h2>
+
+    <p>
+      If you have questions as to why your application was rejected, please
+      contact the Membership Committee by electronic mail to <a
+      href="mailto:membership-committee@gnome.org">membership-committee@gnome.org</a>;
+      you may be able to provide additional information which will lead to the
+      approval of your application. If you are still dissatisfied with the
+      Membership Committee's determination, you may appeal the decision to the
+      Board of Directors by e-mailing <a
+      href="mailto:board@gnome.org">board@gnome.org</a>.
+    </p>
+
+    <h2>Renewing your membership</h2>
+
+    <p>
+      Membership in the GNOME Foundation ordinarily lasts for two years. A
+      reasonable period of time before your membership expires, you will be
+      contacted by the Membership Committee with a request that you file a
+      renewal application, available <a href="application.php">here</a>.
+      Renewal applications will be reviewed according to the same standards
+      outlined above for an initial membership, and must generally be supported
+      by recent or ongoing contributions to GNOME. If you do not file a valid
+      renewal application by the specified deadline, your membership will
+      terminate; former members may, of course, file a new application for
+      membership at a later date, again provided it is supported by recent or
+      ongoing contributions.
+    </p>
+
   </body>
 </html>
